--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-search-field": "^1.0.0",
+    "react-simple-flex-grid": "^1.3.21",
+    "react-use-media": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
